@@ -9,8 +9,7 @@ fixtures:
       ref: 2.2.0
     docker:
       repo: https://github.com/simp/puppetlabs-docker
-      # requires fixes to the upstream module that have not been released yet
-      ref: 587748b6a5b140801f39cb883a1d92a4d40c662f
+      ref: 1.0.4
     iptables:
       repo: https://github.com/simp/pupmod-simp-iptables
       ref: 6.0.3
@@ -19,4 +18,4 @@ fixtures:
       ref: 3.8.0
     stdlib:
       repo: https://github.com/simp/puppetlabs-stdlib
-      ref: 4.19.0
+      ref: 4.19.1
