@@ -14,6 +14,7 @@ simp_docker::default_options:
     docker_ce_package_name: docker
     log_driver: journald
     docker_group: dockerroot
+    socket_group: dockerroot
   ce:
     docker_ce_package_name: docker-ce
     log_driver: journald
