@@ -1,6 +1,8 @@
 * Fri Dec 29 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.1
-- Ensure that the docker_group and socket_group options are the same by default
-  for the 'redhat' release type
+- Set `socket_group` by default in the redhat release type to match
+  docker_group
+- Added a test to emulate a user in docker_group using docker
+- Use released version of puppetlabs/docker
 
 * Mon Nov 27 2017 Nick Miller <nick.miller@onyxpoint.com> - 0.0.1
 - Wrap puppetlabs/docker to:
